crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_inv_inside_nested_block.rs
fn bad_loop(mut x: i32) {
    while x < 3 {
        {
            //@ inv {x} < 3
        }
        x = x + 1;
        break;
    }
}

fn main() {}
